# oneFileGit

./: CMakeLists.txt  README.md
.cache/clangd/index/: fileReader.cpp.3277ACA7A54F73C3.idx  fileReader.hpp.21806BE03BF6154F.idx  hasher.cpp.C05481F9DB744A90.idx  hasher.hpp.91690CB178B681A6.idx  main.cpp.3959C4C84D61A87E.idx  repo.cpp.7353522B84E7ED61.idx  repo.hpp.C37C12351BE9CA38.idx
conanFiles/: conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
include/: fileReader.hpp  hasher.hpp  repo.hpp
src/: fileReader.cpp  hasher.cpp  main.cpp  repo.cpp
